Added support for defining challenge question.
